# My-Vector

./: CMakeLists.txt
include/: CMake_MyVector.h
lib/: calc.lib
src/: CMake_MyVector.cpp  main.cpp
